Fix layout issues

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -15,10 +15,6 @@
   margin-bottom: 1rem;
 }
 
-.bio {
-  margin-top: 3rem;
-}
-
 .timelineLink {
   justify-content: center;
 }
